separate impacts of ILM stopped and index stuck